Fix title z-index relative to date overlay

--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,9 @@ body {
   background-color: #fe6955;
   margin-right: 1ch;
 }
+.today::before {
+  background-color: #78dfff;
+}
 .main {
   grid-column: 2;
   padding: 1rem 3rem 1rem 0;
@@ -172,6 +175,7 @@ body {
   width: 100%;
   content: attr(data-interval);
   background-color: #fff;
+  z-index: 1;
 }
 .task-dueDate:hover::before,
 .task-dueDate:focus::before {
@@ -201,10 +205,11 @@ body {
 }
 .task-input.task-title:focus {
   position: absolute;
-  width: 90%;
+  width: 85%;
   background-color: #fff;
   box-shadow: 0 0 10px 0 lightblue;
   padding: 0.5rem;
+  z-index: 2;
 }
 input[type="checkbox"] {
   accent-color: var(--dark-blue);
@@ -238,14 +243,6 @@ select.task-input:has(option[value="low"]:checked) {
 .completed-task-container > .task-item {
   opacity: 0.6;
 }
-/* .completed-task-container > .task-item::after {
-  content: " ";
-  display: block;
-  margin-left: 1rem;
-  height: 1px;
-  background-color: var(--dark-blue);
-  transform: translateY(-0.8rem);
-} */
 .description-modal-container {
   position: absolute;
   top: 0;
